# article-saver

./: .gitignore  README.md  docker-compose.yml  justfile  pyproject.toml  requirements.txt  v2.md
app/: config.py  database.py  main.py  models.py  processor.py
