[project]
name = "article-saver"
version = "0.1.0"
description = "Helps me save articles for later reading."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "feedgen>=1.0.0",
    "firebase-admin>=6.8.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.37.0",
]
